# hotel

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-0f01a5b8f5a9144f1f85f2499bf0289b5fb7e7581fcb5f9b23fee97ba996c6b4.json  query-0fca48783d929f341c440d5c514ca430691b27d1ea79fbb6146f033360a57b86.json  query-128362370c19c62f56efc364eb9f9985386e9a4450e3ad4a40b2870c5a20a451.json  query-165faa84bcaf2f4b54380f41c6d1317e2e940c18573fbaa82ef2a4ebd0debc7f.json  query-1be9c73c159814af1fc23d66432bf9ba096086934c80caabc2c317e67712de3c.json  query-1f92eac8f39f4ae56c3a13df29e1787f5dd090245af8cbbb59c8c9d88d012108.json  query-244fc803d25abac48f0247752c74add1ac7bb54438ed0e3c1d8e2b8d08356353.json  query-272e7772809056580e3e8a5162bf0aacdfec2cf984d16f3803d867c49757f338.json  query-3910ae3222b3db2adea634869a92ab7c2c573fa7205b17e414b01f58db14450c.json  query-3b25596ad605916658dbdfb69f049493529c47aa3f4fbf6a1d1688854e1b153f.json  query-3c7722c4306831a889a811670bf68de7d10c5bc55c1c7c01be299493092f7092.json  query-3df56b048950c0960116a07e67ca6bc40a1ab424404fd6243f0b88a20d6baa03.json  query-3ed15464f227c95a5af85dc954363110baf1aa74a1ab850ce64c08fd607d2a4b.json  query-3ff1fb4a96eea58c10fd64f0967c56d3d08af24593768d2059b4c3d8e0ece990.json  query-44cb82a7e3da68c85bac9e5388782dcefd9ef45f09ca96265f3c8d1bd5eccd95.json  query-4568fa20d3ebfa73c3ceb1a9df9723f430b007b6d68d84bd08207cb9756a977e.json  query-49773c04794e6e169e1cf9ecdd49ae03bc59e3a4ac929086c1e2102e71dbf05e.json  (+44 more)
backend/deploy/: hotel-backend.service.example
(+87 files in other folders)
