[package]
name = "hotel-backend"
version = "0.1.0"
edition = "2021"
default-run = "hotel-backend"

[lib]
name = "hotel_backend"
path = "src/lib.rs"

[[bin]]
name = "hotel-backend"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-sessions = { version = "0.14", default-features = false, features = ["axum-core", "signed"] }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
rand_core = { version = "0.6", features = ["std"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["serde-well-known"] }
cookie = { version = "0.18", features = ["key-expansion"] }
